--- a/loadLama.yml
+++ b/loadLama.yml
@@ -6,6 +6,7 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - absl-py=0.13.0=pyhd8ed1ab_0
+  - biopython=1.79=py39hb9d737c_3
   - brotlipy=0.7.0=py39hb9d737c_1005
   - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2022.12.7=ha878542_0
@@ -21,10 +22,16 @@ dependencies:
   - gh=2.21.2=ha8f183a_0
   - idna=3.4=pyhd8ed1ab_0
   - ld_impl_linux-64=2.39=hcc3a1bd_1
+  - libblas=3.9.0=16_linux64_openblas
+  - libcblas=3.9.0=16_linux64_openblas
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=12.2.0=h65d4601_19
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
   - libgomp=12.2.0=h65d4601_19
+  - liblapack=3.9.0=16_linux64_openblas
   - libnsl=2.0.0=h7f98852_0
+  - libopenblas=0.3.21=pthreads_h78a6416_3
   - libsqlite=3.40.0=h753d276_0
   - libstdcxx-ng=12.2.0=h46fd767_19
   - libuuid=2.32.1=h7f98852_1000
@@ -38,12 +45,13 @@ dependencies:
   - pyopenssl=23.0.0=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.9.15=hba424b6_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.9=3_cp39
+  - pytz=2022.7.1=pyhd8ed1ab_0
   - readline=8.1.2=h0f457ee_0
   - requests=2.28.1=pyhd8ed1ab_1
   - ruamel.yaml=0.17.21=py39hb9d737c_2
   - ruamel.yaml.clib=0.2.7=py39h72bdee0_1
-  - setuptools=65.6.3=pyhd8ed1ab_0
   - sqlite=3.40.0=h4ff8645_0
   - tk=8.6.12=h27826a3_0
   - toolz=0.12.0=pyhd8ed1ab_0
@@ -57,8 +65,10 @@ dependencies:
   - zstd=1.5.2=h6239696_4
   - pip:
       - alphafold==2.0.0
+      - astunparse==1.6.3
       - cachetools==5.2.0
       - chex==0.0.7
+      - contextlib2==21.6.0
       - decorator==5.1.1
       - dm-haiku==0.0.4
       - dm-tree==0.1.6
@@ -72,6 +82,7 @@ dependencies:
       - grpcio==1.34.1
       - h5py==3.1.0
       - immutabledict==2.0.0
+      - importlib-metadata==6.0.0
       - importlib-resources==5.10.0
       - install==1.3.5
       - jax==0.2.14
@@ -82,19 +93,24 @@ dependencies:
       - keras-preprocessing==1.1.2
       - libclang==14.0.6
       - markdown==3.4.1
+      - markupsafe==2.1.2
       - ml-collections==0.1.0
       - networkx==2.5
       - numpy==1.19.5
       - oauthlib==3.2.2
       - opt-einsum==3.3.0
+      - packaging==23.0
+      - pandas==1.3.4
       - protobuf==3.19.6
       - py3dmol==1.8.1
       - pyasn1==0.4.8
       - pyasn1-modules==0.2.8
       - pyprotein==0.0.2
+      - pyyaml==6.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
       - scipy==1.7.0
+      - setuptools==59.8.0
       - six==1.15.0
       - tabulate==0.9.0
       - tensorboard==2.11.0
@@ -106,3 +122,6 @@ dependencies:
       - termcolor==1.1.0
       - typing-extensions==3.7.4.3
       - websocket-client==1.4.2
+      - werkzeug==2.2.2
+      - wrapt==1.12.1
+      - zipp==3.11.0
